--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="col-xs-12">
             {{ site.description }}
 
-            <p>To add/update a conference, <a target="_blank" href="//icnlab.github.io">send in a pull request</a>.
+            <p>To add/update a conference, <a target="_blank" href="//github.com/icnlab/icnlab.github.io.git">send in a pull request</a>.
             <p><b><i><u>Deadlines auto-display in the time zone of the viewer (unless specified).</u></i></b>
             <p>Last update: {{ site.time | date: "%-d %B %Y" }}
             <div>
